--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="container">
             <div class="parent">
                 <div class="child">
-                    <h1>People count.</h1>
+                    <h1>People countr.</h1>
                     <div class="count-background" id="count-background">
                         <h2 id="count-el">0</h2>
                     </div>
